data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_725.wast
;; 6. **Test 6: `br_table` With All Identical Targets Except One After `nop`**    - Include a `nop` before a `br_table` where all branch targets are identical except one which is invalid. This will test whether the `nop` causes any anomalies.    - Constraint: Confirm that the `nop` does not affect the `br_table`'s correct branch selection and proper trap handling for the invalid index.

(assert_invalid
  (module
    (func (block $lbl0
                 (nop)
                 (br_table $lbl0 $lbl0 $lbl0 $lbl0 -1))
    )
  )
  "invalid br_table index"
)